--- a/rebar.config
+++ b/rebar.config
@@ -5,6 +5,7 @@
             warn_obsolete_guard,
             debug_info,
             {parse_transform}]}.
+{deps, [{emqx_http_lib, {git, "https://github.com/emqx/emqx_http_lib", {tag, "0.1.0"}}}]}.
 {xref_checks, [undefined_function_calls, undefined_functions,
                locals_not_used, deprecated_function_calls,
                warnings_as_errors, deprecated_functions]}.
